change path file

--- a/index.html
+++ b/index.html
@@ -243,22 +243,22 @@
 
     <div class="slideshow-container">
         <div class="mySlides active">
-            <img src="..\web_kado\assets\ntut1.jpg" alt="Our Memory 1">
+            <img src="..\assets\ntut1.jpg" alt="Our Memory 1">
         </div>
         <div class="mySlides">
-            <img src="..\web_kado\assets\ntut2.jpg" alt="Our Memory 2">
+            <img src="..\assets\ntut2.jpg" alt="Our Memory 2">
         </div>
         <div class="mySlides">
-            <img src="..\web_kado\assets\ntut3.jpg" alt="Our Memory 3">
+            <img src="..\assets\ntut3.jpg" alt="Our Memory 3">
         </div>
         <div class="mySlides">
-            <img src="..\web_kado\assets\ntut4.jpg" alt="Our Memory 4">
+            <img src="..\assets\ntut4.jpg" alt="Our Memory 4">
         </div>
         <div class="mySlides">
-            <img src="..\web_kado\assets\ntutt.jpg" alt="Our Memory 5">
+            <img src="..\assets\ntutt.jpg" alt="Our Memory 5">
         </div>
         <div class="mySlides">
-            <img src="..\web_kado\assets\ntut9.jpg" alt="Our Memory 5">
+            <img src="..\assets\ntut9.jpg" alt="Our Memory 5">
         </div>
     </div>
 
@@ -296,16 +296,16 @@
     <div class="audio-player">
         <button id="musicButton">🎵</button>
         <audio id="bgMusic" loop>
-            <source src="..\web_kado\assets\Yung Kai - Blue.mp3" type="audio/mpeg">
+            <source src="..\assets\Yung Kai - Blue.mp3" type="audio/mpeg">
         </audio>
     </div>
 
     <div class="container">
         <div class="photo-collage">
-            <img src="..\web_kado\assets\ntut5.jpg" class="photo-item" alt="Our Memory">
-            <img src="..\web_kado\assets\ntut6.jpg" class="photo-item" alt="Our Memory">
-            <img src="..\web_kado\assets\ntut7.jpg" class="photo-item" alt="Our Memory">
-            <img src="..\web_kado\assets\ntut8.jpg" class="photo-item" alt="Our Memory">
+            <img src="..\assets\ntut5.jpg" class="photo-item" alt="Our Memory">
+            <img src="..\assets\ntut6.jpg" class="photo-item" alt="Our Memory">
+            <img src="..\assets\ntut7.jpg" class="photo-item" alt="Our Memory">
+            <img src="..\assets\ntut8.jpg" class="photo-item" alt="Our Memory">
         </div>
 
         <div class="love-buttons">
